added margin to header and footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="main-container">
     <header>
-        <h1>Header</h1>
+        <h1 class="left-margin">Header</h1>
         <hr>
     </header>
     <main>
@@ -31,7 +31,7 @@
         <hr>
     </main>
     <footer>
-        <p>Made with by ...</p>
+        <p class="left-margin">Made with by ...</p>
     </footer>
 </body>
 </html>
