added margin to card content

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     </header>
     <main>
         <div class="card">
-            <h2>Pinco Pallo</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, nam similique eligendi explicabo distinctio mollitia consectetur et totam! Fugiat iusto voluptas ducimus repellendus quos quibusdam est aliquid veniam illum reprehenderit!</p>
+            <h2 class="author">Pinco Pallo</h2>
+            <p class="text-author">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, nam similique eligendi explicabo distinctio mollitia consectetur et totam! Fugiat iusto voluptas ducimus repellendus quos quibusdam est aliquid veniam illum reprehenderit!</p>
         </div>
         <div class="card">
-            <h2>Pinco Pallo</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, nam similique eligendi explicabo distinctio mollitia consectetur et totam! Fugiat iusto voluptas ducimus repellendus quos quibusdam est aliquid veniam illum reprehenderit! Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <h2 class="author">Pinco Pallo</h2>
+            <p class="text-author">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, nam similique eligendi explicabo distinctio mollitia consectetur et totam! Fugiat iusto voluptas ducimus repellendus quos quibusdam est aliquid veniam illum reprehenderit! Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="card">
-            <h2>Pinco Pallo</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, nam similique eligendi explicabo distinctio mollitia consectetur et totam!</p>
+            <h2 class="author">Pinco Pallo</h2>
+            <p class="text-author">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, nam similique eligendi explicabo distinctio mollitia consectetur et totam!</p>
         </div>
         <div class="card">
-            <h2>Pinco Pallo</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, nam similique eligendi explicabo distinctio mollitia consectetur et totam! Fugiat iusto voluptas ducimus repellendus quos quibusdam est aliquid veniam illum reprehenderit!</p>
+            <h2 class="author">Pinco Pallo</h2>
+            <p class="text-author">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, nam similique eligendi explicabo distinctio mollitia consectetur et totam! Fugiat iusto voluptas ducimus repellendus quos quibusdam est aliquid veniam illum reprehenderit!</p>
         </div>
         <hr>
     </main>
